glx/testdata/invalid/broken-references/vocabularies/repository-types.glx
../../../../../specification/5-standard-vocabularies/repository-types.glx